--- a/styles2.css
+++ b/styles2.css
@@ -66,7 +66,7 @@ body {
 /* Cover Photo */
 .cover-header {
     height: 200px;
-    background-image: url('images/cov3.jpg');     
+    background-image: url('./images/cov3.jpg');     
     background-size: cover;
     background-position: center;
 }
